# gnn-netflow-ad

./: .gitignore  .train_and_infer.py.swp  ArchitectureDiagram.drawio  README.md  environment.yml  report_3.4_federated_learning_framework.md  run_federated_gpu.sh  sweep_arch.sh  sweep_archv2.sh  sweep_epoch_lr.sh  sweep_seeds.sh  sweep_seeds_personalised.sh  sweep_window_step.sh  train_and_evaluate.py  train_and_infer.py  train_and_inferv2.py
docs/: README.md  index.html  index.html.bak  script.js  styles.css
federated/: README.md  evaluate_federated.py  plot_dp_privacy_utility.py  pyproject.toml
federated/fedgnn/: __init__.py  client_app.py  server_app.py  task.py
results/dp_sweep/: privacy_utility.csv
results/lodo/: lodo_tables.csv  lodo_tables.md
results/lodo/heldout_BoT/: federated_per_run.csv  federated_seed_avg.csv
results/lodo/heldout_BoT/seed_42/federated/: comparison.csv
results/lodo/heldout_BoT/seed_42/federated/NF-BoT-IoT-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_BoT/seed_42/federated/NF-CICIDS2018-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_BoT/seed_42/federated/NF-ToN-IoT-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_BoT/seed_42/federated/NF-UNSW-NB15-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_CICIDS/: federated_per_run.csv  federated_seed_avg.csv
results/lodo/heldout_CICIDS/seed_42/federated/: comparison.csv
results/lodo/heldout_CICIDS/seed_42/federated/NF-BoT-IoT-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_CICIDS/seed_42/federated/NF-CICIDS2018-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_CICIDS/seed_42/federated/NF-ToN-IoT-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_CICIDS/seed_42/federated/NF-UNSW-NB15-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_ToN/: federated_per_run.csv  federated_seed_avg.csv
results/lodo/heldout_ToN/seed_42/federated/: comparison.csv
results/lodo/heldout_ToN/seed_42/federated/NF-BoT-IoT-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_ToN/seed_42/federated/NF-CICIDS2018-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_ToN/seed_42/federated/NF-ToN-IoT-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_ToN/seed_42/federated/NF-UNSW-NB15-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_UNSW/: federated_per_run.csv  federated_seed_avg.csv
results/lodo/heldout_UNSW/seed_42/federated/: comparison.csv
results/lodo/heldout_UNSW/seed_42/federated/NF-BoT-IoT-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_UNSW/seed_42/federated/NF-CICIDS2018-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_UNSW/seed_42/federated/NF-ToN-IoT-v3/: metrics.json  threshold_sweep.csv
results/lodo/heldout_UNSW/seed_42/federated/NF-UNSW-NB15-v3/: metrics.json  threshold_sweep.csv
results_infer/: comparison.csv
results_infer/NF-BoT-IoT-v3/: metrics.json
results_infer/NF-CICIDS2018-v3/: metrics.json
results_infer/NF-ToN-IoT-v3/: metrics.json
results_infer/NF-UNSW-NB15-v3/: metrics.json
results_infer/archive/: log1p_3_features_comparison.csv  original_new_features_comparison.csv
results_radar/: plot_centralised_radar.py  plot_federated_radar.py  plot_federated_radar_v2.py
src/: guided_gae_model.py  preprocess.py
src/stages/: graph_inference_stage.py
