[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedgnn"
version = "1.0.0"
description = "Federated (Flower/FedAvg) training of the Guided GAE NetFlow anomaly detector"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.30.0",
    "torch",
    "torch-geometric",
    "scikit-learn",
    "pandas",
    "pyarrow",
    "scipy",
    "matplotlib",
    "tqdm",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "sjchia"

[tool.flwr.app.components]
serverapp = "fedgnn.server_app:app"
clientapp = "fedgnn.client_app:app"

[tool.flwr.app.config]
# how the shared weights are learned:
#   "fedavg"  -- plain weighted averaging of client updates
#   "fedprox" -- same aggregation, but every client adds the proximal term
#                (proximal-mu/2)*||w - w_global||^2 to its local loss
shared-weight = "fedavg"
# FedProx proximal term strength (only used when shared-weight = "fedprox")
proximal-mu = 0.01
# which part of the model stays private on each client (never aggregated):
#   "na"     -- nothing; one fully-shared global model
#   "fedbn"  -- BatchNorm parameters + running stats stay local (FedBN)
#   "fedrep" -- decoder + global-edge-embedding head stays local; only the encoder
#               is aggregated. Each round alternates: train head (body frozen),
#               then train body (head frozen), local-epochs each. (FedRep)
personalisation = "na"
# number of communication rounds; training ALWAYS runs the full budget (no early
# stopping / best-round selection -- the final-round model is saved)
num-server-rounds = 150
# local epochs per round on every client (fedrep runs this many per phase)
local-epochs = 1
# --- differential privacy ------------------------------------------------------
# dp-mode = "off" | "central" | "local"
#   "central" -- client-level central DP: every client L2-clips its own update to
#                dp-clipping-norm (fixedclipping_mod), the SERVER adds Gaussian
#                noise (std = sigma*C/n) to the aggregate. Composes with secagg.
#   "local"   -- local DP: every client clips AND noises its own update before it
#                leaves the machine (LocalDpMod); no trust in the server.
dp-mode = "off"
# noise multiplier sigma: per-update noise std = sigma * dp-clipping-norm. The
# single swept axis of the privacy-utility study for BOTH dp modes (for "local"
# the per-round epsilon is derived from sigma via the Gaussian mechanism, so
# central and local runs at the same sigma are matched in per-client epsilon).
# epsilon is computed post-hoc by an accountant from (sigma, dp-delta, rounds).
dp-noise-multiplier = 1.0
# L2 norm bound C on each client's exchanged update. Calibrated 2026-07-13 via
# sweep_dp_clip.sh (natural update norms: medians 0.05-0.14; C=0.03 was the most
# consistent across all 4 datasets at sigma=1; C>=1 diverges). Frozen -- never
# swept in the privacy studies. NOTE: unrelated to SecAgg+ clipping-range below.
dp-clipping-norm = 0.03
# DP failure probability delta: fixed by convention (<< 1/n_records), never swept
dp-delta = 1e-5
# log the pre-clip L2 norm of every client update as an extra fit metric
# ("update_norm/<dataset>" in history.json) -- used to calibrate dp-clipping-norm
dp-log-norms = false
# --- secure aggregation (SecAgg+) ---------------------------------------------
# secagg = true wraps every fit round in Flower's SecAgg+ protocol: the server
# only ever sees the masked SUM of client updates, never an individual update.
secagg = false
# SecAgg+ clips every exchanged value to [-clipping-range, clipping-range] before
# quantising; raise it if weights/BN running stats exceed this range
clipping-range = 8.0
# each client's secret key is split into num-shares Shamir shares; any
# reconstruction-threshold of them recover it (must be <= num-shares <= #clients)
secagg-num-shares = 4
secagg-reconstruction-threshold = 3
# quantisation grid for the masked integers, and the max aggregation weight a
# client may report (num-examples; with client-weight="equal" this is just 1)
secagg-quantization-range = 4194304
secagg-max-weight = 1000.0
round-timeout = 7200.0
# aggregation weighting across the 4 dataset-clients: "equal" (every dataset has the
# same pull on the shared model, so the largest dataset does not dominate) or
# "examples" (classic FedAvg: proportional to each client's training window count)
client-weight = "equal"
# training hyperparameters (mirror train_and_infer.py defaults)
lr = 0.0001
weight-decay = 0.0
batch-size = 256
hidden-dim = 128
global-emb-dim = 64
heads = 2
node-dim = 32
# data / preprocessing (per-client: each dataset fits its own scaler + vocabs)
data-dir = ""
edge-columns = "baseline"
log1p-columns = "baseline"
top-k-ports = 4
top-k-protocols = 4
window-size = 1000
step-size = 1000
train-ratio = 0.8
max-train-rows = 1000000
seed = 42


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-simulation"

# [tool.flwr.federations.local-simulation]
# options.num-supernodes = 4

# # on the GPU machine: 4 clients share one GPU (0.25 each)
# [tool.flwr.federations.local-simulation-gpu]
# options.num-supernodes = 4
# options.backend.client-resources.num-cpus = 2
# options.backend.client-resources.num-gpus = 0.25
