[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedgnn"
version = "1.0.0"
description = "Federated (Flower/FedAvg) training of the Guided GAE NetFlow anomaly detector"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.30.0",
    "torch",
    "torch-geometric",
    "scikit-learn",
    "pandas",
    "pyarrow",
    "scipy",
    "matplotlib",
    "tqdm",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "sjchia"

[tool.flwr.app.components]
serverapp = "fedgnn.server_app:app"
clientapp = "fedgnn.client_app:app"

[tool.flwr.app.config]
# how the shared weights are learned:
#   "fedavg"  -- plain weighted averaging of client updates
#   "fedprox" -- same aggregation, but every client adds the proximal term
#                (proximal-mu/2)*||w - w_global||^2 to its local loss
shared-weight = "fedavg"
# FedProx proximal term strength (only used when shared-weight = "fedprox")
proximal-mu = 0.01
# which part of the model stays private on each client (never aggregated):
#   "na"     -- nothing; one fully-shared global model
#   "fedbn"  -- BatchNorm parameters + running stats stay local (FedBN)
#   "fedrep" -- decoder + global-edge-embedding head stays local; only the encoder
#               is aggregated. Each round alternates: train head (body frozen),
#               then train body (head frozen), local-epochs each. (FedRep)
personalisation = "na"
# number of communication rounds; training ALWAYS runs the full budget (no early
# stopping / best-round selection -- the final-round model is saved)
num-server-rounds = 150
# local epochs per round on every client (fedrep runs this many per phase)
local-epochs = 1
# --- central differential privacy (server-side fixed clipping) -----------------
# central-dp = true wraps the strategy in Flower's
# DifferentialPrivacyServerSideFixedClipping: each round the SERVER L2-clips every
# client's model update (new params - current global params) to dp-clipping-norm,
# aggregates the clipped updates, then adds Gaussian noise with per-element
# std = dp-noise-multiplier * dp-clipping-norm / n_clients to the aggregate.
# Mutually exclusive with secagg (server-side clipping needs the individual
# updates; SecAgg+ only reveals the sum) and requires client-weight = "equal"
# (the noise std is calibrated for an unweighted mean).
central-dp = false
# noise multiplier sigma; per-round client-level (epsilon, delta) follows from
# (sigma, rounds) via a Gaussian-mechanism accountant, computed post-hoc
dp-noise-multiplier = 1.0
# L2 bound C on each client's per-round update. Calibrated 2026-07-15 from
# 20-round runs with sigma=0 and a non-binding clip (dp_update_norms in
# history.json), median-of-norms over the plateau (rounds>5):
#   personalisation=fedbn: norms ~flat 0.05-0.18 from round 1; per-dataset
#     medians BoT 0.053 / CICIDS 0.143 / ToN 0.135 / UNSW 0.123 -> C = 0.13
#     (the value below; DP sweeps run with fedbn)
#   personalisation=na: norms start ~5.5 (BN running stats dominate early) and
#     plateau at medians 0.066-0.280 -> C = 0.25 if ever swept under na
# Frozen: sweep only dp-noise-multiplier in privacy-utility studies, never C.
# NOTE: unrelated to the SecAgg+ clipping-range below.
dp-clipping-norm = 0.13
# --- secure aggregation (SecAgg+) ---------------------------------------------
# secagg = true wraps every fit round in Flower's SecAgg+ protocol: the server
# only ever sees the masked SUM of client updates, never an individual update.
secagg = false
# SecAgg+ clips every exchanged value to [-clipping-range, clipping-range] before
# quantising; raise it if weights/BN running stats exceed this range
clipping-range = 8.0
# each client's secret key is split into num-shares Shamir shares; any
# reconstruction-threshold of them recover it (must be <= num-shares <= #clients)
secagg-num-shares = 4
secagg-reconstruction-threshold = 3
# quantisation grid for the masked integers, and the max aggregation weight a
# client may report (num-examples; with client-weight="equal" this is just 1)
secagg-quantization-range = 4194304
secagg-max-weight = 1000.0
round-timeout = 7200.0
# aggregation weighting across the 4 dataset-clients: "equal" (every dataset has the
# same pull on the shared model, so the largest dataset does not dominate) or
# "examples" (classic FedAvg: proportional to each client's training window count)
client-weight = "equal"
# training hyperparameters (mirror train_and_infer.py defaults)
lr = 0.0001
weight-decay = 0.0
batch-size = 256
hidden-dim = 128
global-emb-dim = 64
heads = 2
node-dim = 32
# data / preprocessing (per-client: each dataset fits its own scaler + vocabs)
data-dir = ""
edge-columns = "baseline"
log1p-columns = "baseline"
top-k-ports = 4
top-k-protocols = 4
window-size = 1000
step-size = 1000
train-ratio = 0.8
max-train-rows = 1000000
seed = 42


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local-simulation"

# [tool.flwr.federations.local-simulation]
# options.num-supernodes = 4

# # on the GPU machine: 4 clients share one GPU (0.25 each)
# [tool.flwr.federations.local-simulation-gpu]
# options.num-supernodes = 4
# options.backend.client-resources.num-cpus = 2
# options.backend.client-resources.num-gpus = 0.25
